[package]
name = "zone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3" 
solana-program = "1.17.4"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

